app/main/default/objects/OAH_Order__c/fields/BFO_Transmittal_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>BFO_Transmittal_Date__c</fullName>
        <label>BFO Transmittal Date</label>
        <type>Date</type>
    </fields>
</CustomObject>