app/main/default/objects/OAH_Order__c/fields/Board_Approval_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Board_Approval_Date__c</fullName>
        <label>Board Approval Date</label>
        <type>Date</type>
    </fields>
</CustomObject>