app/main/default/objects/OAH_Order__c/fields/Date_of_Issuance__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_of_Issuance__c</fullName>
        <label>Date of Issuance</label>
        <type>Date</type>
    </fields>
</CustomObject>