app/main/default/objects/OAH_Order__c/fields/Mailing_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Mailing_Date__c</fullName>
        <label>Mailing Date</label>
        <type>Date</type>
    </fields>
</CustomObject>