app/main/default/objects/OAH_Order__c/fields/OAH_Case_Number__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>OAH_Case_Number__c</fullName>
        <label>OAH Case Number</label>
        <referenceTo>OAH_Case_List__c</referenceTo>
        <relationshipLabel>OAH Orders</relationshipLabel>
        <relationshipName>OAH_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>