app/main/default/objects/OAH_Order__c/fields/Order_Type__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BFO</fullName>
                </value>
                <value>
                    <fullName>HOFO</fullName>
                </value>
                <value>
                    <fullName>HORO</fullName>
                </value>
                <value>
                    <fullName>Supplemental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>