app/main/default/objects/OAH_Order__c/fields/Receipt_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Receipt_Date__c</fullName>
        <label>Receipt Date</label>
        <type>Date</type>
    </fields>
</CustomObject>