app/main/default/objects/OAH_Order__c/listViews/All_custom.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>All_custom</fullName>
        <columns>NAME</columns>
        <columns>OAH_Case_Number__c</columns>
        <columns>Order_Type__c</columns>
        <columns>Date_of_Issuance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>